# rust_ml_experiments

./: Cargo.toml
src/: main.rs
src/configuration/: server_config.rs
src/models/: ml_dataset.rs  ml_model.rs  mod.rs
src/views/: mod.rs
src/views/data_management/: dm_queries.rs  dm_requests.rs  dm_routes.rs  mod.rs
src/views/index/: index_routes.rs  mod.rs
