[package]
name = "rust_ml_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-multipart = "0.7.2"
actix-web = "4"
bcrypt = "0.13.0"
env_logger = "0.9.0"
uuid = {version = "1.0.0", features = ["serde", "v4"]}
futures =  "0.3.31"
tokio = { version = "1.17.0", features = ["full"] }
serde = {version = "1.0.200", features = ["derive"] }
serde_json = "1"

[dependencies.mongodb]
version = "3.1.0"

# optionally we can have sync 
# see: https://www.mongodb.com/docs/drivers/rust/current/quick-start/download-and-install/
# features = ["sync"]

